# AWS

./: .gitignore  .terraform.lock.hcl  main.tf  pyproject.toml  requirements.txt
.github/workflows/: terraform.yml
aws/lambda/weather_data/: requirements.txt
modules/RDS/: main.tf  outputs.tf  variables.tf
modules/VPC/: main.tf  outputs.tf
modules/buckets/: main.tf  outputs.tf
modules/glue/: README.md  glue_tft.py  main.tf  variables.tf
modules/iam/: main.tf  outputs.tf
modules/lambda/: main.tf
modules/lambda/tft/: Dockerfile  main.py  requirements.txt
modules/redshift/: main.tf
