[tool.poetry]
name = "aws"
version = "0.1.0"
description = ""
authors = ["AidanInceer <aidaninceer0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.2"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
openmeteo-requests = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
